--- a/py36-stretch-build/onbuild/Dockerfile
+++ b/py36-stretch-build/onbuild/Dockerfile
@@ -9,7 +9,7 @@ ONBUILD ARG PIP_REQUIREMENTS=/app/src/requirements/docker.txt
 
 ONBUILD RUN pip install --no-binary=Pillow -r $PIP_REQUIREMENTS
 
-# Remove unneeded files
+# Remove unneeded locale files
 ONBUILD RUN find /usr/local/lib/python3.6/site-packages/ -name '*.po' -delete
 #    find /usr/local/lib/python3.6/site-packages/babel/locale-data/ -not -name 'en*' -not -name 'nl*' -name '*.dat' -delete && \
 #    find /usr/local/lib/python3.6/site-packages/tinymce/ -regextype posix-egrep -not -regex '.*/langs/(en|nl).*\.js' -wholename '*/langs/*.js' -delete
