add some consistency to uWSGI bool options

--- a/py36-stretch-runtime/onbuild/uwsgi.ini
+++ b/py36-stretch-runtime/onbuild/uwsgi.ini
@@ -4,25 +4,28 @@ processes = $(UWSGI_PROCESSES)
 threads = $(UWSGI_THREADS)
 procname-prefix-spaced = uwsgi: $(UWSGI_MODULE) ($(ALLOWED_HOSTS))
 
+# HTTP serving avoids the need for an Nginx container
 http-socket = :8080
-http-enable-proxy-protocol = 1
+http-enable-proxy-protocol = true
 http-auto-chunked = true
 http-keepalive = 75
 http-timeout = 75
-stats = :1717
-stats-http = 1
 offload-threads = $(UWSGI_OFFLOAD_THREADS)
 
-# Better startup/shutdown in docker:
-die-on-term = 1
-lazy-apps = 0
-need-app = 1
+# Stats exposure
+stats = :1717
+stats-http = true
 
-vacuum = 1
-master = 1
+# Better startup/shutdown in docker:
+die-on-term = true
+lazy-apps = false
+need-app = true
+no-defer-accept = true
+
+vacuum = true
+master = true
 enable-threads = true
-thunder-lock = 1
-buffer-size = 65535
+thunder-lock = true
 
 # Logging
 log-x-forwarded-for = true
@@ -36,14 +39,13 @@ ignore-sigpipe = true
 ignore-write-errors = true
 disable-write-exception = true
 
-#listen=1000
-#max-fd=120000
-no-defer-accept = 1
-
-# Limits, Kill requests after 120 seconds
+# Limits, and kill requests after 120 seconds
 harakiri = 120
 harakiri-verbose = true
 post-buffering = 4096
+buffer-size = 65535
+#listen=1000
+#max-fd=120000
 
 # Custom headers
 add-header = X-Content-Type-Options: nosniff
