allow extending uwsgi ini settings

--- a/py36-stretch-runtime/onbuild/uwsgi.ini
+++ b/py36-stretch-runtime/onbuild/uwsgi.ini
@@ -55,17 +55,14 @@ add-header = Connection: Keep-Alive
 
 # Static file serving with caching headers and gzip
 # Only keep long cache for files that have cache busting paths
+# More rules can be added via uwsgi-local.ini
 static-map = /static=/app/web/static
 static-map = /media=/app/web/media
 static-safe = /usr/local/lib/python3.6/site-packages/
 static-safe = /app/src/frontend/static/
 static-gzip-dir = /app/web/static/
 static-expires-uri = ^/media/cache/ 2592000
-static-expires-uri = ^/media/ 3600
 static-expires-uri = ^/static/CACHE/ 2592000
-static-expires-uri = ^/static/frontend/images/ 2592000
-static-expires-uri = ^/static/frontend/fonts/ 2592000
-static-expires-uri = ^/static/ 3600
 route-uri = ^/static/ addheader:Vary: Accept-Encoding
 
 # Cache stat() calls
@@ -84,3 +81,8 @@ error-route-label = error404
 error-route-if = startswith:${PATH_INFO};/static/ remheader:Expires
 error-route-if = startswith:${PATH_INFO};/static/ addheader:Cache-Control: no-cache
 error-route = .* last:
+
+# Allow to extend this configuration
+if-exists = /usr/local/etc/uwsgi-local.ini
+ini = /usr/local/etc/uwsgi-local.ini
+endif =
