update README examples

--- a/py36-stretch-runtime/onbuild/uwsgi.ini
+++ b/py36-stretch-runtime/onbuild/uwsgi.ini
@@ -47,23 +47,24 @@ buffer-size = 65535
 #listen=1000
 #max-fd=120000
 
-# Custom headers
+# Custom headers for all files, not only those served by Django
 add-header = X-Content-Type-Options: nosniff
 add-header = X-XSS-Protection: 1; mode=block
 add-header = Strict-Transport-Security: max-age=16070400
 add-header = Connection: Keep-Alive
 
 # Static file serving with caching headers and gzip
-# Only keep long cache for files that have cache busting paths
-# More rules can be added via uwsgi-local.ini
 static-map = /static=/app/web/static
 static-map = /media=/app/web/media
 static-safe = /usr/local/lib/python3.6/site-packages/
 static-safe = /app/src/frontend/static/
 static-gzip-dir = /app/web/static/
+route-uri = ^/static/ addheader:Vary: Accept-Encoding
+
+# Only add default far-future expires for URLs that have cache busting paths
+# More rules can be added via uwsgi-local.ini
 static-expires-uri = ^/media/cache/ 2592000
 static-expires-uri = ^/static/CACHE/ 2592000
-route-uri = ^/static/ addheader:Vary: Accept-Encoding
 
 # Cache stat() calls
 cache2 = name=statcalls,items=2000,keysize=200,blocksize=50
