disable static-expires-uri, move to custom uwsgi-local.ini

--- a/py36-stretch-runtime/onbuild/uwsgi.ini
+++ b/py36-stretch-runtime/onbuild/uwsgi.ini
@@ -63,8 +63,8 @@ route-uri = ^/static/ addheader:Vary: Accept-Encoding
 
 # Only add default far-future expires for URLs that have cache busting paths
 # More rules can be added via uwsgi-local.ini
-static-expires-uri = ^/media/cache/ 2592000
-static-expires-uri = ^/static/CACHE/ 2592000
+#static-expires-uri = ^/media/cache/ 2592000
+#static-expires-uri = ^/static/CACHE/ 2592000
 
 # Cache stat() calls
 cache2 = name=statcalls,items=2000,keysize=200,blocksize=50
