Reduce thread memory, and reduce default threads to favour processes

--- a/py36-stretch-runtime/onbuild/uwsgi.ini
+++ b/py36-stretch-runtime/onbuild/uwsgi.ini
@@ -47,6 +47,10 @@ buffer-size = 65535
 #listen=1000
 #max-fd=120000
 
+# Reduce memory usage (Linux default is 8MB stack),
+# 512k is sufficient for Python
+thread-stacksize = 512
+
 # Custom headers for all files, not only those served by Django
 add-header = X-Content-Type-Options: nosniff
 add-header = X-XSS-Protection: 1; mode=block
