--- a/py37-stretch-runtime/onbuild/uwsgi.ini
+++ b/py37-stretch-runtime/onbuild/uwsgi.ini
@@ -54,7 +54,6 @@ thread-stacksize = 512
 # Custom headers for all files, not only those served by Django
 add-header = X-Content-Type-Options: nosniff
 add-header = X-XSS-Protection: 1; mode=block
-add-header = Strict-Transport-Security: max-age=16070400
 add-header = Connection: Keep-Alive
 
 # Static file serving with caching headers and gzip
@@ -75,7 +74,10 @@ cache2 = name=statcalls,items=2000,keysize=200,blocksize=50
 static-cache-paths = 86400
 
 # Redirect http -> https
+if-not-env = ALLOW_HTTP
+add-header = Strict-Transport-Security: max-age=16070400
 route-if = equal:${HTTP_X_FORWARDED_PROTO};http redirect-permanent:https://${HTTP_HOST}${REQUEST_URI}
+endif =
 
 # Avoid caching static files with a 404, as another docker container might be serving it.
 # This also avoids forwarding the request to the Python app.
