Add UWSGI_HOT_RELOAD support for skaffold

--- a/py36-stretch-runtime/onbuild/uwsgi.ini
+++ b/py36-stretch-runtime/onbuild/uwsgi.ini
@@ -74,7 +74,7 @@ cache2 = name=statcalls,items=2000,keysize=200,blocksize=50
 static-cache-paths = 86400
 
 # Redirect http -> https
-if-not-env = ALLOW_HTTP
+if-not-env = UWSGI_ALLOW_HTTP=true
 add-header = Strict-Transport-Security: max-age=16070400
 route-if = equal:${HTTP_X_FORWARDED_PROTO};http redirect-permanent:https://${HTTP_HOST}${REQUEST_URI}
 endif =
@@ -88,6 +88,13 @@ error-route-label = error404
 error-route-if = startswith:${PATH_INFO};/static/ remheader:Expires
 error-route-if = startswith:${PATH_INFO};/static/ addheader:Cache-Control: no-cache
 error-route = .* last:
+
+# Allow hot reloading (e.g. skaffold)
+if-env = UWSGI_HOT_RELOAD=true
+exec-asap = manage.py compilemessages
+exec-post-app = manage.py migrate --noinput
+py-auto-reload = 1
+endif =
 
 # Allow to extend this configuration
 ini = /usr/local/etc/uwsgi-local.ini
