Increaase thread-stacksize as some sites gave errors

--- a/py37-stretch-runtime/onbuild/uwsgi.ini
+++ b/py37-stretch-runtime/onbuild/uwsgi.ini
@@ -48,8 +48,8 @@ buffer-size = 65535
 #max-fd=120000
 
 # Reduce memory usage (Linux default is 8MB stack),
-# 512k is sufficient for Python
-thread-stacksize = 512
+# 512k should even be sufficient for Python
+thread-stacksize = 1024
 
 # Custom headers for all files, not only those served by Django
 add-header = X-Content-Type-Options: nosniff
