Update uwsgi settings for beter behavior
- strict: warns about invalid optinos
- single-interpreter: reduces internal uwsgi complexity
- py-call-osafterfork: allows workers to receive signals

--- a/py36-stretch-runtime/onbuild/uwsgi.ini
+++ b/py36-stretch-runtime/onbuild/uwsgi.ini
@@ -1,4 +1,5 @@
 [uwsgi]
+strict = true
 module = $(UWSGI_MODULE)
 processes = $(UWSGI_PROCESSES)
 threads = $(UWSGI_THREADS)
@@ -22,10 +23,14 @@ lazy-apps = false
 need-app = true
 no-defer-accept = true
 
-vacuum = true
+# Better behavior
+# https://www.techatbloomberg.com/blog/configuring-uwsgi-production-deployment/
 master = true
+single-interpreter = true
 enable-threads = true
+py-call-osafterfork = true
 thunder-lock = true
+vacuum = true
 
 # Logging
 log-x-forwarded-for = true
@@ -48,8 +53,8 @@ buffer-size = 65535
 #max-fd=120000
 
 # Reduce memory usage (Linux default is 8MB stack),
-# 512k is sufficient for Python
-thread-stacksize = 512
+# 512k should even be sufficient for Python
+thread-stacksize = 1024
 
 # Custom headers for all files, not only those served by Django
 add-header = X-Content-Type-Options: nosniff
