--- a/py37-stretch-runtime/onbuild/uwsgi.ini
+++ b/py37-stretch-runtime/onbuild/uwsgi.ini
@@ -1,4 +1,5 @@
 [uwsgi]
+strict = true
 module = $(UWSGI_MODULE)
 processes = $(UWSGI_PROCESSES)
 threads = $(UWSGI_THREADS)
@@ -22,10 +23,14 @@ lazy-apps = false
 need-app = true
 no-defer-accept = true
 
-vacuum = true
+# Better behavior
+# https://www.techatbloomberg.com/blog/configuring-uwsgi-production-deployment/
 master = true
+single-interpreter = true
 enable-threads = true
+py-call-osafterfork = true
 thunder-lock = true
+vacuum = true
 
 # Logging
 log-x-forwarded-for = true
