Remove old Python 3.6/3.7 images, add new Python 3.10 bullseye image

--- a/py310-bullseye-build/onbuild/Dockerfile
+++ b/py310-bullseye-build/onbuild/Dockerfile
@@ -1,6 +1,6 @@
 # Build environment has gcc and develop header files.
 # The installed files are copied to the smaller runtime container.
-FROM edoburu/django-base-images:py37-stretch-build
+FROM edoburu/django-base-images:py310-bullseye-build
 
 # Install (and compile) all dependencies
 ONBUILD RUN mkdir -p /app/src/requirements
@@ -10,6 +10,6 @@ ONBUILD ARG PIP_REQUIREMENTS=/app/src/requirements/docker.txt
 ONBUILD RUN pip install --no-binary=Pillow -r $PIP_REQUIREMENTS
 
 # Remove unneeded locale files
-ONBUILD RUN find /usr/local/lib/python3.7/site-packages/ -name '*.po' -delete
-#    find /usr/local/lib/python3.7/site-packages/babel/locale-data/ -not -name 'en*' -not -name 'nl*' -name '*.dat' -delete && \
-#    find /usr/local/lib/python3.7/site-packages/tinymce/ -regextype posix-egrep -not -regex '.*/langs/(en|nl).*\.js' -wholename '*/langs/*.js' -delete
+ONBUILD RUN find /usr/local/lib/python3.10/site-packages/ -name '*.po' -delete
+#    find /usr/local/lib/python3.10/site-packages/babel/locale-data/ -not -name 'en*' -not -name 'nl*' -name '*.dat' -delete && \
+#    find /usr/local/lib/python3.10/site-packages/tinymce/ -regextype posix-egrep -not -regex '.*/langs/(en|nl).*\.js' -wholename '*/langs/*.js' -delete
