--- a/py38-buster-runtime/onbuild/uwsgi.ini
+++ b/py38-buster-runtime/onbuild/uwsgi.ini
@@ -11,6 +11,7 @@ http-enable-proxy-protocol = true
 http-auto-chunked = true
 http-keepalive = 75
 http-timeout = 75
+honour-range = true
 offload-threads = $(UWSGI_OFFLOAD_THREADS)
 
 # Stats exposure
