--- a/py312-bookworm-runtime/onbuild/uwsgi.ini
+++ b/py312-bookworm-runtime/onbuild/uwsgi.ini
@@ -29,6 +29,7 @@ no-defer-accept = true
 master = true
 single-interpreter = true
 enable-threads = true
+py-call-uwsgi-fork-hooks = true
 py-call-osafterfork = true
 thunder-lock = true
 vacuum = true
